--- a/index.html
+++ b/index.html
@@ -37,11 +37,25 @@
     </fieldset>
   </header>
   <main>
-    <section></section>
-  @nathanf
-  1987
-  Followers
-  12 Today
+    <section class="container">
+
+      <div class="card">
+        <div class="card__platform">
+          <div class="card__icon">
+            <img src="images/icon-facebook.svg" alt="">
+          </div>
+          <div class="card__username">@nathanf</div>
+        </div>
+        <div class="card__count">1987
+          <div class="card__label">Followers</div>
+        </div>
+        <div class="card__change">12 Today</div>
+      </div>
+    </section>
+ 
+  
+  
+  
 
   @nathanf
   1044
