--- a/index.html
+++ b/index.html
@@ -37,40 +37,83 @@
     </fieldset>
   </header>
   <main>
-    <section class="container">
-
-      <div class="card">
+    <section class="container cards">
+      <div class="card card--facebook">
         <div class="card__platform">
-          <div class="card__icon">
-            <img src="images/icon-facebook.svg" alt="">
-          </div>
+            <img class="card__icon" src="images/icon-facebook.svg" alt="Facebook">
           <div class="card__username">@nathanf</div>
         </div>
-        <div class="card__count">1987
-          <div class="card__label">Followers</div>
+        <div class="card__followers">
+          <div class="card__count card__count--big">1987
         </div>
-        <div class="card__change">12 Today</div>
+          <div class="card__label">Followers</div>
+        </div>  
+        <div class="card__change card__change--up ">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">12 Today</div> 
+        </div>
+      </div>
+      <div class="card card--twitter">
+        <div class="card__platform">
+            <img class="card__icon" src="images/icon-twitter.svg" alt="Twitter">
+          <div class="card__username">@nathanf</div>
+        </div>
+        <div class="card__followers">
+          <div class="card__count card__count--big">1044
+        </div>
+          <div class="card__label">Followers</div>
+        </div>  
+        <div class="card__change card__change--up ">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">99 Today</div> 
+        </div>
+      </div>
+      <div class="card card--instagram">
+        <div class="card__platform">
+            <img class="card__icon" src="images/icon-instagram.svg" alt="Instagram">
+          <div class="card__username">@realnathanf</div>
+        </div>
+        <div class="card__followers">
+          <div class="card__count card__count--big">11k
+        </div>
+          <div class="card__label">Followers</div>
+        </div>  
+        <div class="card__change card__change--up ">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">1099 Today</div> 
+        </div>
+      </div>
+      <div class="card card--youtube">
+        <div class="card__platform">
+            <img class="card__icon" src="images/icon-youtube.svg" alt="YouTube">
+          <div class="card__username">Nathan F.</div>
+        </div>
+        <div class="card__followers">
+          <div class="card__count card__count--big">8239
+        </div>
+          <div class="card__label">Subscribers</div>
+        </div>  
+        <div class="card__change card__change--up ">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">144 Today</div> 
+        </div>
       </div>
     </section>
+
+  
  
   
   
+
+  
+  
+  
   
 
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+  
+  
+  
+  
 
 
 
