--- a/index.html
+++ b/index.html
@@ -93,33 +93,31 @@
         </div>
           <div class="card__label">Subscribers</div>
         </div>  
-        <div class="card__change card__change--up ">
-          <img src="images/icon-up.svg" alt="up arrow">
+        <div class="card__change card__change--down ">
+          <img src="images/icon-down.svg" alt="down arrow">
           <div class="card__number">144 Today</div> 
         </div>
       </div>
     </section>
 
-  
- 
-  
-  
-
-  
-  
-  
-  
-
-  
-  
-  
-  
-
-
+    <section class="container">
+      <h2>Overview - Today</h2>
+      <div class="cards">
+      <div class="card card-grid">
+        <div class="card__subtitle">Page Views</div>
+        <div><img class="" src="images/icon-facebook.svg" alt="Facebook"></div>
+        <div class="card__count card__count--small">87</div>
+        <div class="card__change card_change--up">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">3%</div>
+        </div>
+      </div>
+    </div>
+    </section>
 
   Overview - Today
 
-  Page Views
+  
   87
   3%
 
