updated bottom card, colors for toggle, js switcher

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="/dist/style.css">
-  <script src="/dist/script.js"></script>
+  <script defer src="/dist/script.js"></script>
+
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -25,16 +26,22 @@
       <h1>Social Media Dashboard</h1>
         <span class="header__subtitle">Total Followers: 23,004</span>
       </div>
-    <fieldset class="header__toggle toggle" aria-label="theme toggle" role="radiogroup">
-      <label for="dark">Dark Mode <span class="visually-hidden">On</span></label>
-      <div class="toggle__wrapper">
-        <input type="radio" name="theme" id="dark">
-        <input type="radio" name="theme" id="light">
-        <span aria-hidden="true" class="toggle__background"></span>
-        <span aria-hidden="true" class="toggle__button"></span>
-      </div>
-    <label for="light" class="visually-hidden">Dark Mode Off</lable>
-    </fieldset>
+      <fieldset
+        class="header__toggle toggle"
+        aria-label="theme toggle"
+        role="radiogroup"
+      >
+        <label for="dark"
+          >Dark Mode <span class="visually-hidden">On</span></label
+        >
+        <div class="toggle__wrapper">
+          <input type="radio" name="theme" id="dark" />
+          <input type="radio" name="theme" id="light" />
+          <span aria-hidden="true" class="toggle__background"></span>
+          <span aria-hidden="true" class="toggle__button"></span>
+        </div>
+        <label for="light" class="visually-hidden">Dark Mode Off</label>
+      </fieldset>
   </header>
   <main>
     <section class="container cards">
@@ -105,53 +112,83 @@
       <div class="cards">
       <div class="card card-grid">
         <div class="card__subtitle">Page Views</div>
-        <div><img class="" src="images/icon-facebook.svg" alt="Facebook"></div>
+        <img class="" src="images/icon-facebook.svg" alt="Facebook">
         <div class="card__count card__count--small">87</div>
-        <div class="card__change card_change--up">
+        <div class="card__change card__change--up">
           <img src="images/icon-up.svg" alt="up arrow">
           <div class="card__number">3%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Likes</div>
+        <img class="" src="images/icon-facebook.svg" alt="Facebook">
+        <div class="card__count card__count--small">52</div>
+        <div class="card__change card__change--down">
+          <img src="images/icon-down.svg" alt="down arrow">
+          <div class="card__number">2%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Likes</div>
+        <img class="" src="images/icon-instagram.svg" alt="Instagram">
+        <div class="card__count card__count--small">5462</div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">2257%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Profile Views</div>
+        <img class="" src="images/icon-facebook.svg" alt="Facebook">
+        <div class="card__count card__count--small">52k</div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">1375%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Retweets</div>
+        <img class="" src="images/icon-twitter.svg" alt="Twitter">
+        <div class="card__count card__count--small">117</div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">303%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Likes</div>
+        <img class="" src="images/icon-twitter.svg" alt="Twitter">
+        <div class="card__count card__count--small">507</div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow">
+          <div class="card__number">553%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Likes</div>
+        <img class="" src="images/icon-youtube.svg" alt="YouTube">
+        <div class="card__count card__count--small">107</div>
+        <div class="card__change card__change--down">
+          <img src="images/icon-down.svg" alt="down arrow">
+          <div class="card__number">19%</div>
+        </div>
+      </div>
+      <div class="card card-grid">
+        <div class="card__subtitle">Total Views</div>
+        <img class="" src="images/icon-facebook.svg" alt="Facebook">
+        <div class="card__count card__count--small">1407</div>
+        <div class="card__change card__change--down">
+          <img src="images/icon-down.svg" alt="down arrow">
+          <div class="card__number">12%</div>
         </div>
       </div>
     </div>
     </section>
 
-  Overview - Today
-
-  
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Peach Trees</a>.
   </div>
 </main>
 </body>
